upadte product details page